k8s/bff-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bff-service
  template:
    metadata:
      labels:
        app: bff-service
    spec:
      containers:
        - name: bff-service
          image: chatapp-bff:v4
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bff-service
spec:
  selector:
    app: bff-service
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080 # Gör att du kan nå den via minikube ip:30080
  type: NodePort
