k8s/message-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message-service
  template:
    metadata:
      labels:
        app: message-service
    spec:
      containers:
        - name: message-service
          image: chatapp-message:v2
          imagePullPolicy: Never
          ports:
            - containerPort: 8082
          readinessProbe:
            tcpSocket:
              port: 8082
            initialDelaySeconds: 20
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: message-service
spec:
  selector:
    app: message-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
